--- a/UdemyRabbitMQ.WaterMarkWeb/appsettings.json
+++ b/UdemyRabbitMQ.WaterMarkWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "RabbitMQ": "amqps://thziwrmr:sleeDqUl2lx_aIctsXttQFL3u5nXNzAe@jaguar.rmq.cloudamqp.com/thziwrmr"
+    "RabbitMQ": "rabbitmqurl.com"
   },
 
   "Logging": {
